--- a/src/app.scss
+++ b/src/app.scss
@@ -242,7 +242,8 @@ body {
                 top: 70%;
                 left: 50%;
                 transform: translateX(-50%);
-                background-color: rgb(9, 13, 245);
+                //  background-color: rgb(219, 221, 119);
+                //  background-color: ;
                 p {
                     text-align: center;
                     font-size: 1.8em;
